[package]
name = "custom_types_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
serde = "1.0.132"
stable-structures = { git = "https://github.com/dfinity/ic", rev = "901226d5ca1f3f03eb7dbf2042d66fa63eae3b9a" }

